--- a/inception-coclass-linking/pom.xml
+++ b/inception-coclass-linking/pom.xml
@@ -62,5 +62,14 @@
     	<artifactId>deeplearning4j-nlp</artifactId>
     	<version>1.0.0-beta4</version>
 	</dependency>
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-core</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.github.javafaker</groupId>
+  		<artifactId>javafaker</artifactId>
+  		<version>0.18</version>
+  	</dependency>
   </dependencies>
 </project>
