Update API changes and fix DKPRO version

--- a/inception-coclass-linking/pom.xml
+++ b/inception-coclass-linking/pom.xml
@@ -11,6 +11,7 @@
   <name>INCEpTION - CoClass Linking</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <dkpro.core.version>1.10.0</dkpro.core.version>
   </properties>
   <dependencies>
   	<dependency>
@@ -26,6 +27,7 @@
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.core.opennlp-asl
   		</artifactId>
+  		<version>${dkpro.core.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.commons</groupId>
@@ -36,12 +38,14 @@
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.core.io.text-asl
   		</artifactId>
+  		<version>${dkpro.core.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.core.snowball-asl
   		</artifactId>
+  		<version>${dkpro.core.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>de.tudarmstadt.ukp.inception.app</groupId>
