--- a/inception-coclass-linking/pom.xml
+++ b/inception-coclass-linking/pom.xml
@@ -11,7 +11,7 @@
   <name>INCEpTION - CoClass Linking</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <dkpro.core.version>1.10.0</dkpro.core.version>
+    <dkpro.core.version>1.10.0</dkpro.core.version> <!-- We use 1.10.0 since 11 is not published yet on mvn central -->
   </properties>
   <dependencies>
   	<dependency>
