--- a/inception-coclass-linking/pom.xml
+++ b/inception-coclass-linking/pom.xml
@@ -66,6 +66,11 @@
     	<artifactId>deeplearning4j-nlp</artifactId>
     	<version>1.0.0-beta4</version>
 	</dependency>
+	<dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.9</version>
+    </dependency>
   	<dependency>
   		<groupId>org.mockito</groupId>
   		<artifactId>mockito-core</artifactId>
